# Rust_Iced_Draw

./: Cargo.toml  README.md  instructions.txt  issues.txt
flowchart/: ipg_canvas_flowchart.txt
resources/: data copy.json  data.json
src/: colors.rs  draw_canvas.rs  helpers.rs  main.rs  mod.rs  path_builds.rs  temp.rs
