[package]
name = "draw"
version = "0.1.0"
authors = []
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.13.1", features = ["debug", "canvas", "tokio"]}
iced_aw = {git = "https://github.com/iced-rs/iced_aw", rev = "3485f3a", features=["color_picker"]}
serde = "*"
serde_json = "*"

